--- a/project/src/main/resources/templates/user-info.html
+++ b/project/src/main/resources/templates/user-info.html
@@ -9,7 +9,7 @@
     <title>Dashboard Template · Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-<link href="/css/bootstrap.min.css" rel="stylesheet">
+<link href="../static/css/bootstrap.min.css" rel="stylesheet">
 
 
     <style>
@@ -29,7 +29,7 @@
       }
     </style>
     <!-- Custom styles for this template -->
-    <link href="/css/dashboard.css" rel="stylesheet">
+    <link href="../static/css/dashboard.css" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
