实现了图片的拖动与缩放

--- a/project/src/main/resources/static/css/main.css
+++ b/project/src/main/resources/static/css/main.css
@@ -2442,3 +2442,9 @@ h3.agileinfo_sign span {
   display: inline-block;
   float: left;
 }
+.painterArea{
+  width: 300px;
+  height: 300px;
+  overflow: hidden;
+  margin: 150px;
+}
