--- a/project/src/main/resources/templates/index.html
+++ b/project/src/main/resources/templates/index.html
@@ -23,6 +23,101 @@
     <link rel="stylesheet" href="/css/responsive.css">
     <link rel="stylesheet" href="/css/font-awesome.css">
 
+    <!-- jquery -->
+    <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+
+    <!-- bootsrap -->
+    <link
+            href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css"
+            rel="stylesheet" />
+    <script
+            src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+    <!-- bootstrap-table -->
+    <link
+            href="https://cdn.bootcss.com/bootstrap-table/1.11.1/bootstrap-table.min.css"
+            rel="stylesheet" />
+    <script
+            src="https://cdn.bootcss.com/bootstrap-table/1.11.1/bootstrap-table.min.js"></script>
+    <script
+            src="https://cdn.bootcss.com/bootstrap-table/1.11.1/locale/bootstrap-table-zh-CN.min.js"></script>
+
+    <!--layer ui-->
+    <script type="text/javascript" src="layer-v3.1.1/layer/layer.js"></script>
+
+    <!-- <link rel="shortcut icon" href="icon/favicon.ico" />  -->
+
+    <script type="text/javascript">
+        var xmlhttp;
+        function login(){
+            var userId=document.getElementById('userId').value;
+            var password=document.getElementById('password').value;
+            var data={"userId":userId,"password":password};
+            if(userId.length==0||password.length==0){alert("账号或密码为空");return;}
+            if (window.XMLHttpRequest) {xmlhttp=new XMLHttpRequest();}
+            else{xmlhttp=new ActiveXObject("Microsoft.XMLHTTP");}
+            xmlhttp.onreadystatechange=getResult;
+            xmlhttp.open("POST","login",true);
+            xmlhttp.setRequestHeader("Content-type","application/json");
+            xmlhttp.send(JSON.stringify(data));
+        }
+
+        function getResult(){
+            if (xmlhttp.readyState==4) {
+                //document.getElementById("").innerHTML=xmlhttp.responseText;
+                if(xmlhttp.status==200){
+                    var rec=xmlhttp.responseText;
+                    if(rec==0){
+                        document.getElementById("insert").innerHTML="账号不存在！";
+                    }
+                    else if(rec==-1){
+                        document.getElementById("insert").innerHTML="密码错误！";
+                    }
+                    else{
+                        window.location.href = "index";
+                    }
+                }
+                else{
+                    alert("连接失败");
+                }
+            }
+        }
+    </script>
+    <script>
+        $(function() {
+            //注册
+
+                $("#signUp").off("click").on("click", function () {
+                    var record = {
+                        userId:$("#userId1").val(),
+                        password:$("#password1").val(),
+                        nickname:$('#nickname').val(),
+                        email:$('#email1').val(),
+                        phoneNum:$('#phoneNum').val(),
+                        headPicture:$('#headPicture').val(),
+                        city:$('#city').val(),
+                    }
+                    $.ajax({
+                        type : "POST",
+                        url : "insertAccount",
+                        datatype : "text",
+                        contentType : "application/json",
+                        data : record,
+                        async : true,
+                        success: function (data) {
+                            if(data.status == "1")
+                            alert('添加成功');
+                            return false;
+                        },
+                        error: function (result) {
+                            alert('添加失败');
+                        }
+                    })
+                });
+
+        });
+
+    </script>
   </head>
   
   <body>
@@ -80,7 +175,7 @@
             <div class="carousel-item active">
               <img src="/img/slider/bg-1.jpg" alt="">
               <div class="carousel-caption text-left">
-                <h3 class="wow fadeInRight" data-wow-delay="0.2s">Handcrafted</h1>  
+                <h3 class="wow fadeInRight" data-wow-delay="0.2s">Handcrafted</h3>
                 <h2 class="wow fadeInRight" data-wow-delay="0.4s">Bootstrap 4 Template</h2>
                 <h4 class="wow fadeInRight" data-wow-delay="0.6s">Comes with All Essential Sections & Elements</h4>
                 <a href="#" class="btn btn-lg btn-common btn-effect wow fadeInRight" data-wow-delay="0.9s">Download</a>
@@ -1211,12 +1306,13 @@
               </p>
               <form action="#" method="post">
                 <div class="styled-input agile-styled-input-top">
-                  <input type="text" placeholder="User Name" name="Name" required="">
+                  <input type="text" id="userId" placeholder="User Name" name="Name" required="required">
                 </div>
                 <div class="styled-input">
-                  <input type="password" placeholder="Password" name="password" required="">
+                  <input type="password" id="password" placeholder="Password" name="password" required="required">
                 </div>
-                <input type="submit" value="Sign In">
+                <input type="submit" value="Sign In" onclick="login()">
+                <div id="insert" style="color:red;padding:10px;font-size:12px"></div>
               </form>
               <div class="clearfix"></div>
             </div>
@@ -1244,20 +1340,20 @@
                 <p>
                   欢迎加入AShirt DIY设计平台! 首先请注册您的账号。
                 </p>
-                <form action="#" method="post">
+                <form action="" method="post">
                   <div class="styled-input agile-styled-input-top">
-                    <input type="text" placeholder="Name" name="Name" required="">
+                    <input id="userId1" type="text" placeholder="Name" name="Name" required="required">
                   </div>
                   <div class="styled-input">
-                    <input type="email" placeholder="E-mail" name="Email" required="">
+                    <input id="email1" type="email" placeholder="E-mail" name="Email" required="required">
                   </div>
                   <div class="styled-input">
-                    <input type="password" placeholder="Password" name="password" id="password1" required="">
+                    <input type="password" placeholder="Password" name="password" id="password1" required="required">
                   </div>
                   <div class="styled-input">
-                    <input type="password" placeholder="Confirm Password" name="Confirm Password" id="password2" required="">
+                    <input type="password" placeholder="Confirm Password" name="Confirm Password" id="password2" required="required">
                   </div>
-                  <input type="submit" value="Sign Up">
+                  <input id="signUp" type="submit" value="Sign Up">
                 </form>
                 <p>
                   <a href="#">By clicking register, I agree to your terms</a>
